# tiny-llm

./: AGENTS.md  README.md  batch-main.py  bench.py  main.py  pyproject.toml  pyrightconfig.json
.github/workflows/: linux-cuda.yml
benches/: test_attention.py  test_quantized_matmul.py
book/src/: preface.md  setup.md  week1-01-attention.md  week1-02-positional-encodings.md  week1-03-gqa.md  week1-04-rmsnorm-and-mlp.md  week1-05-qwen2-model.md  week1-06-generate-response.md  week1-07-sampling-prepare.md  week1-overview.md  week2-01-kv-cache.md  week2-02-quantized-matmul.md  week2-04-flash-attention.md  week2-06-prefill-and-batch.md  week2-overview.md
scripts/: check-cuda-installation.py  check-installation.py  dev-tools.py  diff_api.py
src/extensions/: CMakeLists.txt  build.py
src/extensions/src/: axpby.cpp  axpby.h  tiny_llm_ext.h
src/extensions_ref/: CMakeLists.txt  bindings.cpp  build.py  test.py
src/extensions_ref/src/: flash_attention.cpp  flash_attention.cu  quantized_matmul.cpp  quantized_matmul.cu  tiny_llm_ext.h  utils.cpp
src/extensions_torch/: bindings.cpp  build.py  test.py
src/extensions_torch/src/: axpby.cpp  axpby.cu  utils.cpp
src/extensions_torch_ref/: .clangd  CMakeLists.txt  bindings.cpp  build.py  test.py
src/extensions_torch_ref/src/: flash_attention.cpp  flash_attention.cu  quantized_matmul.cpp  quantized_matmul.cu  tiny_llm_ext.h  utils.cpp
src/extensions_torch_ref/tiny_llm_ext_torch_ref/: __init__.py
src/tiny_llm/: __init__.py  attention.py  basics.py  batch.py  embedding.py  generate.py  kv_cache.py  layer_norm.py  models.py  positional_encoding.py  quantize.py  qwen2_week1.py  qwen2_week2.py  qwen3.py  sampler.py
src/tiny_llm_ref/: __init__.py  attention.py  kv_cache.py  models.py  quantize.py  qwen2_week1.py  qwen3.py  sampler.py
src/tiny_llm_torch/: basics.py  batch.py  kv_cache.py  models.py  qwen2_week1.py  qwen2_week2.py  tokenizer.py
src/tiny_llm_torch_ref/: __init__.py  attention.py  basics.py  batch.py  embedding.py  generate.py  kv_cache.py  layer_norm.py  models.py  positional_encoding.py  quantize.py  qwen2_week1.py  qwen2_week2.py  sampler.py  tokenizer.py
tests/: tiny_llm_base.py  utils.py
tests_refsol/: test_rope.py  test_week_1_day_2.py  test_week_1_day_3.py  test_week_1_day_4.py  test_week_2_day_1.py  test_week_2_day_4.py  tiny_llm_base.py
tests_torch_ref/: test_week_1_day_1.py  test_week_1_day_3.py  test_week_1_day_5.py  test_week_2_day_1.py  test_week_2_day_2.py  test_week_2_day_4.py  test_week_2_day_6.py  tiny_llm_base.py
